--- a/kubernetes/kube-config-external.yaml
+++ b/kubernetes/kube-config-external.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: events-web
-        image: gcr.io/dtc-user13/external-image:v1.0.1
+        image: absrivathsa/external:v1.2
         env:
         - name: PORT
           value: "8082"
