--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,7 @@ sonar.projectKey=external
 sonar.projectName=external
 sonar.projectVersion=1.0
 sonar.language=js
+sonar.sources=.
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=src/**/*.spec.js
 sonar.test.inclusions=src/**/*.spec.js
